feat(invoice): add mark_as endoint
